--- a/form.html
+++ b/form.html
@@ -22,13 +22,27 @@
             <br>
             <label for="Gender">Gender</label>
             <input type="radio" name="r1">Male</input>
-            placeholder="Enter student name"requied/>
+            <input type="radio" name="r1">FeMale</input>
             <br>
-            <label for=""studentName">Student Name</label>
-            <input type="text" name="studentname"
-            placeholder="Enter student name"requied/>
+            <label for="DOB">Student DOB</label>
+            <input type="date"/>
             <br>
-            
+            <label for="Email">Email</label>
+            <input type="email" name="email">
+            <br>
+            <label for="Adress">Address:</label>
+            <textarea cols="10" rows="8"></textarea>
+            <br>
+            <label for="course">Select course</label>
+            <select option="EEE">
+                <option>CSE</option>
+                <option>CSM</option>
+                <option>CSD</option>
+            </select>
+            <br>
+            <br>
+            <input type="submit" value="submit"/>
+            <input type="reset" value="reset"/>
         </form>
     </body>
 </html>
