--- a/CSS/bootstrap/flex.html
+++ b/CSS/bootstrap/flex.html
@@ -4,7 +4,9 @@
             .container{
                 display: flex;
                 flex-direction: row;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
+                flex-grow: inherit;
+                flex-flow: row-reverse;
             }
             .child{
                width: 100px;
