--- a/CSS/bootstrap/b2.html
+++ b/CSS/bootstrap/b2.html
@@ -2,15 +2,15 @@
     <head>
         <style>
             p{
-                font-size: 20px;
+                font-size: 30px;
                 font-family: 'Times New Roman', Times, serif;
-                font-weight: 400;
                 font-display: arial;
+                font-weight: 600;
             }
             body{
-                background-image: url("doremon copy 2.jpg");
+                background-image: url("doremon.jpg");
                 height: 500px;
-                width: 60px;
+                width: 100px;
             }
         </style>
     </head>
